# flutter-rust-rendering

./: .gitignore  CLAUDE.md  README.md  build_ios.sh  phase_1.md  phase_12.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md  phase_7.md  plan.md  presentation_slides.md  pubspec.yaml
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/flutter_con/: GameGLPlatformView.kt  GameGLRenderer.kt  GameGLSurfaceFactory.kt  GameNative.kt  MainActivity.kt
ios/Flutter/: Debug.xcconfig  Release.xcconfig
ios/Runner/: AppDelegate.swift  GameGLView.swift  GamePlatformViewFactory.swift  Info.plist  Runner-Bridging-Header.h  game_engine.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml  build_android.sh
rust/src/: backend.rs  event_bus.rs  jni.rs  lib.rs  touch.rs  window.rs
rust/src/backend/: events.rs  gl_loader.rs  mod.rs  system.rs  window.rs
rust/src/game/: mod.rs  player.rs
test/: widget_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
