[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "game_engine"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# OpenGL bindings
glow = "0.14"

# egui core (no winit dependency)
egui = { version = "0.29", default-features = false }

# egui OpenGL renderer
egui_glow = { version = "0.29", default-features = false }

# Logging
log = "0.4"

# Image loading for textures
image = { version = "0.25", default-features = false, features = ["png"] }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
jni = { version = "0.21", default-features = false }

# iOS-specific dependencies
[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"

[profile.release]
lto = true
opt-level = "z"
strip = true
