[package]
name = "game_engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "game_engine"
crate-type = ["cdylib", "staticlib"]

[dependencies]
# notan framework
notan = "0.11"
notan_app = "0.11"
notan_core = "0.11"
notan_graphics = "0.11"
notan_egui = "0.11"
notan_glow = "0.11"

# egui core (used through notan integration)
egui = { version = "0.29", default-features = false }
# OpenGL bindings (for rendering)
glow = "0.14"
# egui OpenGL renderer (for rendering egui output)
egui_glow = { version = "0.29", default-features = false }

# Logging
log = "0.4"

# Image loading for textures
image = { version = "0.25", default-features = false, features = ["png"] }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.14"
jni = { version = "0.21", default-features = false }
# Provide stub android_main to satisfy android-activity linker requirement
# We use custom backend, so this won't actually be called
android-activity = { version = "0.4", features = ["native-activity"] }

# iOS-specific dependencies
[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2"
core-foundation = "0.9"

[profile.release]
lto = true
opt-level = "z"
strip = true
